Template clone terminé

--- a/index.html
+++ b/index.html
@@ -15,15 +15,18 @@
     <select class="form-select categories" aria-label="Default select example">
         <option selected>Sélectionner une categorie</option>
     </select>
+    <div class="books-list d-flex flex-wrap justify-content-center">
+
+    </div>
     <template id="template">
-        <div class="card mb-3">
-            <img src="" class="card-img-top" alt="...">
+        <div class="card mb-3" style="width: 18rem;">
+            <img src="" class="card-img-top " alt="...">
             <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-ISBN">ISBN :</p>
-                <p class="card-date">Date de publication :</p>
-                <p class="card-pages">Nombre de pages :</p>
-                <p class="card-description">Description :</p>
+                <h5 class="card-title"></h5>
+                <p class="card-ISBN"></p>
+                <p class="card-date"></p>
+                <p class="card-pages"></p>
+                <p class="card-description"></p>
             </div>
         </div>
     </template>
